# chronos

./: .gitignore  README.md  test_concurrency.py  test_engine.py  test_reload.py
backend/: .env  main.py  nul  requirements.txt
backend/app/: auth.py  database.py  engine_bridge.py  models.py  schemas.py  websocket.py
backend/app/routers/: admin.py  analytics.py  auth.py  orders.py  portfolio.py  stocks.py
database/: queries.sql  schema.sql  transaction_test_output.txt  transactions_test.sql  triggers.sql
engine/: CMakeLists.txt
engine/include/: MatchingEngine.h  OrderBook.h  Types.h
engine/src/: MatchingEngine.cpp  main.cpp
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: TickerBar.jsx  TradeMap.jsx
frontend/src/data/: stockLocations.js
frontend/src/pages/: ActiveOrders.jsx  Dashboard.jsx  GlobalMap.jsx  Login.jsx  MarketWatch.jsx  OrderBook.jsx  PlaceOrder.jsx  Portfolio.jsx  Register.jsx
